--- a/src/components/addTask/AddTask.css
+++ b/src/components/addTask/AddTask.css
@@ -7,7 +7,14 @@
     margin-top: 4%;
     margin-left: auto;
     margin-right: auto;
-    -webkit-box-shadow: -1px 4px 15px -2px #000000;
-    box-shadow: 0px 4px 10px -2px #000000;
+    -webkit-box-shadow: -1px 4px 15px -2px rgb(146, 146, 146);
+    box-shadow: 0px 4px 10px -2px rgb(146, 146, 146);
     text-align: left;
+    background-color:rgba(0,0,0,0.5);
+  }
+
+  .addtask{
+    width:100%;
+    margin-top: -30px;
+    color: whitesmoke;
   }
