--- a/src/components/todoList/ToDoList.css
+++ b/src/components/todoList/ToDoList.css
@@ -8,21 +8,12 @@
     margin-bottom: 10px;
     -webkit-box-shadow: -1px 4px 15px -2px #000000;
     box-shadow: 0px 3px 10px -2px #000000;
-    border-bottom: 5px solid rgb(66, 66, 66);
-    
+    border-bottom: 5px solid rgb(146, 146, 146);
+    background-color:rgba(0,0,0,0.7);
   }
-  
-  .button{
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-right: 30px;
-    padding-left: 30px;
-    border-radius: 5px;
+
+  .todolist{
+    width:100%;
+    margin-top: -30px;
     color: whitesmoke;
-    background-color: rgb(59, 59, 59);
-  }
-  
-  .button:hover{
-    text-decoration: none;
-    color: rgb(0, 195, 255);
   }
