--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -14,8 +14,8 @@
   font-size: 30px;
   color: aliceblue;
   border-radius: 10px;
-  box-shadow: 1px 0px 12px 3px #d5f34e;
+  box-shadow: 1px 0px 12px 3px #000000;
   background-color:#9db803 ;
   /* border: 3px solid #022e41; */
-  width:60%;
+  width:10%;
 }
